tests/error/modifier_errors/return_found.err
Error: Unexpected return (at $FILE:7:8)
  | 
5 | def test() -> None:
6 |     with dagger:
7 |         return
  |         ^^^^^^ Return found in a `With` block
  | 
6 |     with dagger:
  |          ------ modifier is used here

Guppy compilation failed due to 1 previous error
